--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "faultfixers-react-native-lib",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "dependencies": {
     "moment": "^2.22.2",
-    "react-moment": "^0.7.0"
+    "react-moment": "^0.7.0",
+    "react-native-spinkit": "^1.1.1"
   },
   "peerDepdencies": {
     "faultfixers-js-lib": "^0.0.9",
