--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "faultfixers-react-native-lib",
-  "version": "0.0.4",
+  "version": "0.0.6",
   "dependencies": {
     "moment": "^2.22.2",
     "react-moment": "^0.7.0",
-    "react-native-spinkit": "^1.1.1"
+    "react-native-spinkit": "^1.1.1",
+    "values.js": "^1.0.3"
   },
   "peerDepdencies": {
-    "faultfixers-js-lib": "^0.0.9",
+    "faultfixers-js-lib": "^0.0.14",
     "prop-types": "^15.6.1",
     "react": "16.0.0",
     "react-native": "0.51.0"
@@ -24,7 +25,7 @@
     "eslint-plugin-import": "^2.10.0",
     "eslint-plugin-react": "^7.7.0",
     "eslint-plugin-react-native": "^3.2.1",
-    "faultfixers-js-lib": "^0.0.9",
+    "faultfixers-js-lib": "^0.0.14",
     "jest": "^23.0.0",
     "prop-types": "^15.6.1",
     "react": "16.0.0",
