--- a/.eslintrc
+++ b/.eslintrc
@@ -43,5 +43,7 @@
     "default-case": 0,
     "no-underscore-dangle": 0,
     "prefer-rest-params": 0,
+    "prefer-template": 0,
+    "no-use-before-define": 0
   },
 }
