--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "lint": "eslint src"
+    "lint": "eslint src Gruntfile.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
@@ -15,6 +15,8 @@
     "grunt": "^1.0.3",
     "grunt-webfont": "^1.7.2",
     "http-errors": "~1.6.2",
+    "jquery": "3.3.1",
+    "jquery-modal": "^0.9.1",
     "less-middleware": "~2.2.1",
     "load-grunt-tasks": "^4.0.0",
     "moment": "^2.22.2",
