--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "jquery-modal": "^0.9.1",
     "less-middleware": "~2.2.1",
     "load-grunt-tasks": "^4.0.0",
+    "md5": "^2.2.1",
     "moment": "^2.22.2",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "sharp": "^0.21.0"
   }
 }
