--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lint": "eslint src Gruntfile.js"
   },
   "dependencies": {
+    "bson-objectid": "^1.2.4",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
