--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "lint": "eslint src Gruntfile.js"
   },
   "dependencies": {
+    "babel-core": "^6.26.3",
+    "babel-preset-es2015-ie": "^6.7.0",
     "bson-objectid": "^1.2.4",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
