--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "faultfixers-react-native-lib",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "dependencies": {
     "moment": "^2.22.2",
     "react-moment": "^0.7.0",
@@ -10,16 +10,15 @@
   "peerDepdencies": {
     "faultfixers-js-lib": "^0.0.14",
     "prop-types": "^15.6.1",
-    "react": "16.0.0",
-    "react-native": "0.51.0"
+    "react": "16.6.3",
+    "react-native": "0.58.3"
   },
   "devDependencies": {
-    "babel-core": "^6.24.1",
+    "@babel/core": "^7.2.2",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^8.2.2",
-    "babel-jest": "22.0.4",
-    "babel-loader": "^6.4.1",
-    "babel-preset-env": "^1.4.0",
-    "babel-preset-react-native": "4.0.0",
+    "babel-jest": "^24.0.0",
+    "babel-loader": "^8.0.5",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.10.0",
@@ -27,14 +26,19 @@
     "eslint-plugin-react-native": "^3.2.1",
     "faultfixers-js-lib": "^0.0.14",
     "jest": "^23.0.0",
+    "metro-react-native-babel-preset": "^0.51.1",
     "prop-types": "^15.6.1",
-    "react": "16.0.0",
-    "react-native": "0.51.0",
-    "react-test-renderer": "16.0.0",
-    "webpack": "^2.4.1"
+    "react": "16.6.3",
+    "react-native": "0.58.3",
+    "react-test-renderer": "16.6.3",
+    "webpack": "^2.4.1",
+    "webpack-cli": "^3.2.1"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "transform": {
+      "^.+\\.(js)$": "<rootDir>/node_modules/react-native/jest/preprocessor.js"
+    }
   },
   "scripts": {
     "webpack-test": "webpack --output-library-target commonjs2 --output-filename test-bundle.js",
