Updates acorn and minimist dependencies

--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "faultfixers-react-native-lib",
   "version": "0.0.8",
   "dependencies": {
+    "acorn": ">=7.2.0",
+    "minimist": ">=1.2.5",
     "moment": "^2.22.2",
     "react-moment": "^0.7.0",
     "react-native-spinkit": "^1.1.1",
